--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,27 +1,44 @@
+
 <div class="card" >
     
-    <div class="card-body ">
+
+    <div class="card-body text-black">
       <h5 class="card-title">Listado de Cliente</h5>
-    <table class="table table-bordered table-striped">
-        <thead>
-            <tr>
-            <th>id</th>
-            <th>nombre</th>
-            <th>apellido</th>
-            <th>email</th>
-            <th>fecha</th>
-        </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let cliente of clientes">
-                <td>{{ cliente.id }}</td>
-                <td>{{ cliente.nombre }}</td>
-                <td>{{ cliente.apellido }}</td>
-                <td>{{ cliente.email }}</td>
-                <td>{{ cliente.createAt }}</td>
-            </tr>
-        </tbody>
-    </table>
-     
     </div>
+
+    <div >
+        <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">Crear Cliente</button>
+        
+    </div>
+  
+    
+    <div> 
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>nombre</th>
+                    <th>apellido</th>
+                    <th>email</th>
+                    <th>fecha</th>
+                    <th>opciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let cliente of clientes">
+                    <td>{{ cliente.id }}</td>
+                    <td>{{ cliente.nombre }}</td>
+                    <td>{{ cliente.apellido }}</td>
+                    <td>{{ cliente.email }}</td>
+                    <td>{{ cliente.createat }}</td>
+                    <td> 
+                        <button class="btn btn-rounded btn-secondary" type="button"  [routerLink]="['/clientes/form',cliente.id]">Editar Cliente</button>
+                        <button class="btn btn-danger" (click)="delete(cliente)">Eliminar</button>
+                    </td>
+           
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    
   </div>
